--- a/src/app/components/landing/landing.component.html
+++ b/src/app/components/landing/landing.component.html
@@ -1,33 +1,33 @@
 <div class="centrar">
     <!-- FONDO CAMBIANTE -->
 
-    <div class="fondoMascotas"> 
+    <div class="fondoMascotas" data-aos="flip-left"> 
         <img src="../assets/images/mascota.png"  class="ImgMascota" alt="">
     </div>
     
     
     <div class="infoMascota">
-        <div class="nameMascota">
+        <div class="nameMascota" data-aos="zoom-in">
             <h1> MAMAINE PELAGIA</h1>
         </div>
         
         <div class="OpcionesMascota">
-            <div class="example-button-container">
+            <div class="example-button-container" data-aos="fade-up">
                 <button mat-fab aria-label="Example icon button with a delete icon">
                 <mat-icon>settings_phone</mat-icon>
                 </button>
             </div>
-            <div class="example-button-container">
+            <div class="example-button-container" data-aos="fade-down">
                 <button mat-fab  aria-label="Example icon button with a bookmark icon">
                 <mat-icon>message</mat-icon>
                 </button>
             </div>
-            <div class="example-button-container">
+            <div class="example-button-container" data-aos="fade-up">
                 <button mat-fab  aria-label="Example icon button with a home icon">
                 <mat-icon>account_circle</mat-icon>
                 </button>
             </div>
-            <div class="example-button-container">
+            <div class="example-button-container" data-aos="fade-down"> 
                 <button mat-fab aria-label="Example icon button with a heart icon">
                 <mat-icon>location_on</mat-icon>
                 </button>
@@ -35,18 +35,41 @@
         </div>
 
             
-        <div class="DatosMascota">
+        <div class="DatosMascota" >
 
-            <p class="ribbon">
-                <span class="text"><strong class="bold">Special Offer:</strong></span>
+            <p class="ribbon" data-aos="fade-left">
+                <span class="text"><strong class="bold">
+                    Mis datos: <br>
+                    <div class="infoRibbon">
+                        <span> Soy un perro Rot Guaitler</span>
+                        <br>
+                        <span> Asesino de pitbull </span>
+                    </div>
+                 
+                </strong></span>
             </p>
 
-            <p class="ribbon">
-                <span class="text"><strong class="bold">Special Offer:</strong></span>
+            <p class="ribbon" data-aos="fade-right">
+                <span class="text"><strong class="bold">
+                    Mi Dueño: <br>
+                    <div class="infoRibbon">
+                        <span> Jesus Ormeño yatacp</span>
+                        <br>
+                        <span> dni 840949</span>
+                    </div>
+                  
+                </strong></span>
             </p>
 
-            <p class="ribbon">
-                <span class="text"><strong class="bold">Special Offer:</strong></span>
+            <p class="ribbon" data-aos="fade-left">
+                <span class="text"><strong class="bold">
+                    Mi Ubicación: <br> 
+                    <div class="infoRibbon">
+                        <span> Calle San luis Chincha</span>
+                        <br>
+                        <span> Urbanizacion Los guagua</span>
+                    </div>
+                </strong></span>
             </p>
  
         </div>
