--- a/src/app/components/landing/landing.component.scss
+++ b/src/app/components/landing/landing.component.scss
@@ -1,179 +1,106 @@
- .fondoMascotas{
-    background-image: url('/assets/images/fondo_mascota.jpg'); 
-     //  background-repeat: no-repeat;
-     background-size: cover; 
-     height: 25vh;
-     border-bottom: solid #99b21a;
-     animation: cambiarFondo 15s infinite;
-     background-image: url('/assets/images/fondo_mascota.jpg'); 
- }
+.fondoMascotaspc{
+  
+  .card-mascota{ 
+    display: inline-grid;
+    border-radius: 25px;
+    margin: 5% 0;
+    width: 80%;
+    height: 75vh;
+    padding: 0 !important;
 
- @keyframes cambiarFondo {
-    0%   {  background-image: url('/assets/images/fondo_mascota2.jpg'); }
-  //  25%   { background-image: url('/assets/images/fondo_mascota2.jpg'); }
-    50%   { background-image: url('/assets/images/fondo_mascota3.jpg'); }
-  //  75%  { background-image: url('/assets/images/fondo_mascota4jpg'); }
-    100%   {  background-image: url('/assets/images/fondo_mascota4.jpg'); }
-}
-  
-.ImgMascota{ 
-    margin-top: 25%;
-    border-radius: 50%;
-    border: solid 5px white;
-}
- 
-.nameMascota > h1{
-    font-family: Lucida, Handwriting, Cursive; 
-    text-align: center;
-    font-weight: bold;
-    text-transform: uppercase;
-    font-size: 35px;
-    color: #ffffff;
-    animation: shadows 5s cubic-bezier(0.51, 0.63, 1, 0.53) infinite, move 1.2s ease-in infinite;
-    letter-spacing: 0.4rem; 
-    width: 100%;
-}
+    .grid-card{
+      display: grid;
+      grid-template-columns: 30% 70%;
 
-@keyframes shadows {
-    0% {
-      text-shadow: none;
-    }
-  
-    10% {
-      text-shadow: 3px 3px 0 #601ccc;
-    }
-  
-    20% {
-      text-shadow: 3px 3px 0 #f49b90, 6px 6px 0 #f28b7d;
-    }
-  
-    30% {
-      text-shadow: 3px 3px 0 #f49b90, 6px 6px 0 #5c3b8e, 9px 9px #f07a6a;
-    }
-  
-    40% {
-      text-shadow: 3px 3px 0 #f49b90, 6px 6px 0 #f28b7d, 9px 9px #f07a6a, 12px 12px 0 #ee6352;
-    }
-  
-    50% {
-      text-shadow: 3px 3px 0 #f49b90, 6px 6px 0 #f28b7d, 9px 9px #f07a6a, 12px 12px 0 #ee6352;
-    }
-  
-    60% {
-      text-shadow: 3px 3px 0 #f49b90, 6px 6px 0 #f28b7d, 9px 9px #f07a6a, 12px 12px 0 #ee6352;
-    }
-  
-    70% {
-      text-shadow: 3px 3px 0 #f49b90, 6px 6px 0 #f28b7d, 9px 9px #f07a6a;
-    }
-  
-    80% {
-      text-shadow: 3px 3px 0 #f49b90, 6px 6px 0 #f28b7d;
-    }
-  
-    90% {
-      text-shadow: 3px 3px 0 #f49b90;
-    }
-  
-    100% {
-      text-shadow: none;
+      .foto{
+        padding: 5%;
+        background-color:#e0f6fd;
+        border-top-left-radius: 15px;
+        border-bottom-left-radius: 15px;
+
+        h1{
+          margin-top: 5%;
+        }
+      }
     }
   }
-  
+}
 
 
- .fondoMascotas{
-    background-color: rgb(153, 178, 26);
-    background-repeat: no-repeat;
-    background-size: cover; 
- }
 
- .infoMascota{
-    padding-top: 25%;
-    color: white;
-  //  background-image: url('/assets/images/fondo_mascota3.jpg');
-    background-color: #47520b;
-    
-    height: 100vh;
- }
+.ImgMascotapc{
+  margin-top: 10%;
+  border-radius: 50px;
+}
 
- .centrar{
-    text-align: center;
- }
+.raza{
+  border-radius: 50px;
+  background-color: #82b0bf;
+  padding: 3%;
+  color: white;
+  font-weight: bold;
+}
 
- .OpcionesMascota{
-    display: flex;
-    text-align: center;
-    justify-content: center;
-    column-gap: 5%;
-    padding-top: 10%;
+.info-detalle{
+  padding: 15% 10%;
+  display: grid;
+  grid-template-columns: 15% 85%;
+  grid-row-gap: 15%;
+  row-gap: 15%;
 
+  mat-label{
+    padding-left: 3%;
+    text-align: left;
+  }
+}
+
+.boton_agregar{
+  margin-top: 10%;
     button{
-        background: white;
-        color: black;
+      border-radius: 15px;
+      height: 50px;
     }
 }
- 
-
-.DatosMascota{ 
-    padding-top: 10%;
-    .ribbon{
-        font-size: 20px;
-        position: relative;
-        display: inline-block;
-        margin: 5% 0;
-        text-align: center;
-      }
-      .text{
-        display: flex;
-        padding: 5%;
-        min-width: 12em;
-        /* line-height: 1.2em; */
-        background: #94eb65;
-        /* position: relative; */
-        color: #280b83;
-      }
-      .ribbon:after,.ribbon:before,
-      .text:before,.text:after,
-      .bold:before{
-        content:'';
-        position:absolute;
-        border-style:solid;
-      }
-      .ribbon:before{
-        top:0.3em; left:0.2em;
-        width:100%; height:100%;
-        border:none;
-        background:#68ff17;
-        z-index:-2;
-      }
-      .text:before{
-        bottom:100%; left:0;
-        border-width: .5em .7em 0 0;
-        border-color: transparent #84fc44 transparent transparent;
-      }
-      .text:after{
-        top:100%; right:0;
-        border-width: .5em 2em 0 0;
-        border-color: #68ff17  transparent transparent transparent;
-      }
-      .ribbon:after, .bold:before{
-        top:0.5em;right:-2em;
-        border-width: 1.1em 1em 1.1em 3em;
-        border-color: #FECC30 transparent #FECC30 #FECC30;
-        z-index:-1;
-      }
-      .bold:before{
-        border-color: #68ff17 transparent #EBECED #EBECED;
-        top:0.7em;
-        right:-2.3em;
-      }
-      
-
-}
 
 
+.info-card{
+  text-align: left;
+  background: white;
 
-.infoRibbon{
-    text-align: left;
+  .content_info_card{
+    margin: 5%;
+  }
+
+  .info_titulo{
+      p{
+        font-weight: 500;
+        font-size: 25px;
+      }
+      span{
+        border-bottom: solid 3px black;
+      }
+  }
+
+  .bloque_1, .bloque_2{
+    margin: 3% 0;
+  }
+
+  .bloque_3{
+    margin: 5% 0;
+    display: grid;
+    grid-template-columns: 50% 50%;
+
+    mat-card{
+      border-radius: 25px;
+      margin: 3%;
+      text-align: center;
+    }
+
+    .info_titulo2{
+      p{
+        font-weight: 500;
+        font-size: 18px;
+      }
+    }
+  }
 }
