se termino el modelado

--- a/src/app/components/landing/landing.component.html
+++ b/src/app/components/landing/landing.component.html
@@ -1,97 +1,94 @@
 <!-- DISEÑO PC -->
 <div class="centrar" id="pc">
     <div class="fondoMascotaspc">   
-        <mat-card class="card-mascota"> 
-            <div class="grid-card">
-                <div class="foto">
-                    <img src="../assets/images/mascota.png"  class="ImgMascotapc" alt="">
+      
+        <div class="grid-card">
+            <div class="foto">
+                <img src="../assets/images/mascota.png"  class="ImgMascotapc" alt="">
 
-                    <h1> Nombre del perro</h1>
+                <h1> Nombre del perro</h1>
 
-                    <div class="raza">
-                        PITBULL
-                    </div>
- 
-                    <div class="info-detalle">
-                        <mat-icon>room</mat-icon>
-                        <mat-label> Loma. pero </mat-label>
-
-                        <mat-icon>chat</mat-icon>
-                        <mat-label> cristian@gmail.com </mat-label>
-
-                        <mat-icon>phonelink_ring</mat-icon>
-                        <mat-label> 925550602 </mat-label>
-
-                        <mat-icon>facebook</mat-icon>
-                        <mat-label> Loma. pero </mat-label>
-                    </div>
-
-               
-                    <div class="boton_agregar">
-                        <button mat-raised-button color="primary"> 
-                            <mat-icon>add_circle</mat-icon>
-                            Agregar Contacto
-                        </button>
-                    </div>
-
+                <div class="raza">
+                    PITBULL
                 </div>
 
-                <div class="info-card">
-                    <div class="content_info_card">
-                        <div class="info_titulo">
-                            <p>Sobre mí</p> 
-                        </div>
-    
-                        <div class="bloque_1">
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati, aspernatur quo ex dignissimos aperiam veniam esse, est voluptates eum a quis aliquam, officiis nesciunt ullam quibusdam earum beatae id mollitia.
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae autem qui maxime, ipsa quasi sit fugit doloribus libero distinctio mollitia pariatur veniam, dolorem ullam esse commodi. Assumenda impedit porro placeat.
-                        </div>
-                        
-                        <div class="bloque_2">
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati, aspernatur quo ex dignissimos aperiam veniam esse, est voluptates eum a quis aliquam, officiis nesciunt ullam quibusdam earum beatae id mollitia.
-                            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fugiat ullam sit earum eligendi ipsam repellat blanditiis qui vitae ipsa exercitationem accusamus labore libero placeat eum pariatur, culpa eius aliquam doloremque?
-                        </div>
-    
-                        <div class="info_titulo">
-                            <p>Detalles de la mascota</p> 
-                        </div>
-    
-                        <div class="bloque_3">
-                            <mat-card> 
-                                <div class="info_titulo2">
-                                    <p>Sobre mí</p> 
-                                    Lorem ipsum dolor sit am dantium   aspernatur veniam doloremque quidem, perferendis dolorem odit beatae amet?
-                                </div>
-                            </mat-card>
-    
-                            <mat-card> 
-                                <div class="info_titulo2">
-                                    <p>Sobre mí</p> 
-                                    Lorem ipsum dolor sit am dantium   aspernatur veniam doloremque quidem, perferendis dolorem odit beatae amet?
-                                </div>
-                            </mat-card>
-    
-                            <mat-card> 
-                                <div class="info_titulo2">
-                                    <p>Sobre mí</p> 
-                                    Lorem ipsum dolor sit am dantium   aspernatur veniam doloremque quidem, perferendis dolorem odit beatae amet?
-                                </div>
-                            </mat-card>
-    
-                            <mat-card> 
-                                <div class="info_titulo2">
-                                    <p>Sobre mí</p> 
-                                    Lorem ipsum dolor sit am dantium   aspernatur veniam doloremque quidem, perferendis dolorem odit beatae amet?
-                                </div>
-                            </mat-card>
-                        </div>
+                <div class="info-detalle">
+                    <mat-icon>room</mat-icon>
+                    <mat-label> Loma. pero </mat-label>
+
+                    <mat-icon>chat</mat-icon>
+                    <mat-label> cristian@gmail.com </mat-label>
+
+                    <mat-icon>phonelink_ring</mat-icon>
+                    <mat-label> 925550602 </mat-label>
+
+                    <mat-icon>facebook</mat-icon>
+                    <mat-label> Loma. pero </mat-label>
+                </div>
+
+            
+                <div class="boton_agregar">
+                    <button mat-raised-button color="primary"> 
+                        <mat-icon>add_circle</mat-icon>
+                        Agregar Contacto
+                    </button>
+                </div>
+
+            </div>
+
+            <div class="info-card">
+                <div class="content_info_card">
+                    <div class="info_titulo">
+                        <p>Sobre mí</p> 
+                    </div>
+
+                    <div class="bloque_1">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati, aspernatur quo ex dignissimos aperiam veniam esse, est voluptates eum a quis aliquam, officiis nesciunt ullam quibusdam earum beatae id mollitia.
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae autem qui maxime, ipsa quasi sit fugit doloribus libero distinctio mollitia pariatur veniam, dolorem ullam esse commodi. Assumenda impedit porro placeat.
                     </div>
                     
+                    <div class="bloque_2">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati, aspernatur quo ex dignissimos aperiam veniam esse, est voluptates eum a quis aliquam, officiis nesciunt ullam quibusdam earum beatae id mollitia.
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fugiat ullam sit earum eligendi ipsam repellat blanditiis qui vitae ipsa exercitationem accusamus labore libero placeat eum pariatur, culpa eius aliquam doloremque?
+                    </div>
 
-                </div>
-              
+                    <div class="info_titulo">
+                        <p>Detalles de la mascota</p> 
+                    </div>
+
+                    <div class="bloque_3">
+                        <mat-card> 
+                            <div class="info_titulo2">
+                                <p>Sobre mí</p> 
+                                Lorem ipsum dolor sit am dantium   aspernatur veniam doloremque quidem, perferendis dolorem odit beatae amet?
+                            </div>
+                        </mat-card>
+
+                        <mat-card> 
+                            <div class="info_titulo2">
+                                <p>Sobre mí</p> 
+                                Lorem ipsum dolor sit am dantium   aspernatur veniam doloremque quidem, perferendis dolorem odit beatae amet?
+                            </div>
+                        </mat-card>
+
+                        <mat-card> 
+                            <div class="info_titulo2">
+                                <p>Sobre mí</p> 
+                                Lorem ipsum dolor sit am dantium   aspernatur veniam doloremque quidem, perferendis dolorem odit beatae amet?
+                            </div>
+                        </mat-card>
+
+                        <mat-card> 
+                            <div class="info_titulo2">
+                                <p>Sobre mí</p> 
+                                Lorem ipsum dolor sit am dantium   aspernatur veniam doloremque quidem, perferendis dolorem odit beatae amet?
+                            </div>
+                        </mat-card>
+                    </div>
+                </div> 
             </div> 
-        </mat-card>
+        </div> 
+    
     </div>
 </div>
 
@@ -100,48 +97,98 @@
     <!-- FONDO CAMBIANTE -->
 
     <div class="fondoMascotas">  
-        <img src="../assets/images/mascota.png"  class="ImgMascota" alt="">
- 
-        <div>
-            <h1  class="nameMascota"> MAMAINE PELAGIA</h1>
-        </div>
-        
-        <div class="OpcionesMascota">
-            <div class="example-button-container" >
-                <button mat-fab aria-label="Example icon button with a delete icon">
+        <img src="../assets/images/mascota.png"  class="ImgMascota" alt=""> 
+       
+        <h1  class="nameMascota"> MAMAINE PELAGIA</h1> 
+        <p class="razamovil"> Pitbull </p>  
+
+        <div class="OpcionesMascota"> 
+            <button mat-fab >
                 <mat-icon>settings_phone</mat-icon>
-                </button>
-                <span> <a href="#div1">Mi numero de contacto</a>  </span>
-            </div>
-            <div class="example-button-container">
-                <button mat-fab  aria-label="Example icon button with a bookmark icon">
+            </button> 
+            <button mat-fab   >
                 <mat-icon>message</mat-icon>
-                </button>
-                <span> <a href="#div2"> Mi informacion</a>  </span>
-            </div>
-            <div class="example-button-container" >
-                <button mat-fab  aria-label="Example icon button with a home icon">
+            </button>  
+            <button mat-fab  >
                 <mat-icon>account_circle</mat-icon>
-                </button>
-                <span> <a href="#div3">Mi dueño</a>  </span>
-            </div>
-            <div class="example-button-container" > 
-                <button mat-fab aria-label="Example icon button with a heart icon">
-                <mat-icon>location_on</mat-icon>
-                </button>
-                <span> <a href="#div3">  Como llegar a mi hogar</a> </span>
-            </div>
+            </button>  
         </div>  
         
-        <mat-card> 
-            <div class="info">
-                <strong>  Numero Celular : </strong> 
-                <p> 934560280 </p>  
+        
+        <div class="info_bloque_1">
+            <p class="titulo_bloque_1"> Sobre Mi</p>  
+            <p> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Corrupti temporibus porro, cupiditate eum deserunt officiis distinctio veritatis quos aliquid sunt et. Quam at ipsam voluptatum, iusto aspernatur sed commodi alias! </p>   
+        </div>
+        
 
-                <strong>  Operador  : </strong> 
-                <p> ENTEL </p>   
+        <div class="info_bloque_2">
+            <div class="titulo_bloque_2">
+                <button mat-mini-fab >
+                    <mat-icon>settings_phone</mat-icon>
+                </button> 
+                <p> Información</p>  
             </div>
-        </mat-card>
+
+             <div class="detalles_bloque_2">
+                <strong> Celular : </strong>   
+                <p> 48048415610  </p>   
+            
+                <strong> Direccion : </strong>   
+                <p> Av Progreso 18508 San isdro  </p>  
+             </div>
+        </div>
+
+
+        <div class="info_bloque_2">
+            <div class="titulo_bloque_2">
+                <button mat-mini-fab >
+                    <mat-icon>add_box</mat-icon>
+                </button> 
+                <p> Más Información</p>  
+            </div>
+
+             <div class="detalles_bloque_2">
+                <strong> Especio : </strong>   
+                <p> Perro  </p>   
+            
+                <strong> Raza : </strong>   
+                <p> Mestizo </p>  
+
+                <strong> Sexo : </strong>   
+                <p> Hembra  </p>   
+            
+                <strong> Fecha Nacimiento : </strong>   
+                <p>  09 Julio 2022  </p>  
+   
+             </div>
+
+             <div class="titulo_bloque_2">
+                <button mat-mini-fab >
+                    <mat-icon>pets</mat-icon>
+                </button> 
+                <p> Color de Pelaje</p>  
+            </div>
+
+             <div class="detalles_bloque_2">
+                <strong> Mandibula Inferior : </strong>   
+                <p> Blanco  </p>   
+            
+                <strong> Pecho : </strong>   
+                <p> Blanco  </p>  
+
+                <strong> Patas : </strong>   
+                <p> Blanco  </p>   
+            
+                <strong> Carda : </strong>   
+                <p>  marrón  </p>  
+
+                <strong> Esplada : </strong>   
+                <p>  Negra  </p>  
+   
+             </div>
+        </div>
+
+
     </div>
   
 </div>
