se avanzo con el formulario de registro de datos de al mascota

--- a/src/app/components/landing/landing.component.html
+++ b/src/app/components/landing/landing.component.html
@@ -21,14 +21,14 @@
 
                     <mat-icon>phonelink_ring</mat-icon>
                     <mat-label> 925550602 </mat-label>
-
+<!-- 
                     <mat-icon>facebook</mat-icon>
-                    <mat-label> Loma. pero </mat-label>
+                    <mat-label> Loma. pero </mat-label> -->
                 </div>
 
             
                 <div class="boton_agregar">
-                    <button mat-raised-button color="primary"> 
+                    <button mat-raised-button color="primary" (click)="onRegistrarDatos()"> 
                         <mat-icon>add_circle</mat-icon>
                         Agregar Contacto
                     </button>
